# gap

./: .env.example  .gitignore  CHECKLIST.md  Makefile  PLAN.md  README.md  SOLUTION_NOTES.md  environment.yml  pyproject.toml  requirements.txt
scripts/: benchmark.py  gaming_csv_to_db.py
src/: __init__.py  conversation.py  llm_client.py  pipeline.py  types.py
tests/: conftest.py  test_cache_and_retry.py  test_conversation.py  test_edge_cases.py  test_llm_client.py  test_public.py  test_result_validation.py  test_token_counting.py  test_validation.py
